---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: "String::from_utf8(buf).unwrap()"
---
Error: expected assignment token
   ╭─[<test>:1:14]
   │
 1 │ export HELLO == 1 + 1
   │              ─┬  
   │               ╰── you might mean: `=`
───╯

